--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
+    "react-is": "^17.0.2",
     "remark-slug": "^6.0.0",
     "styled-components": "^5.0.1",
     "typescript": "^3.8.3"
